--- a/tools/chef/roles/project-web.json.erb
+++ b/tools/chef/roles/project-web.json.erb
@@ -11,7 +11,7 @@
     "role[redis30]",
     "role[memcache]",
     "recipe[config-driven-helper::capistrano]",
-    "recipe[config-driven-helper::packages-additional]"
+    "recipe[config-driven-helper::packages-additional]",
     "role[web-magento]"
   ],
   "default_attributes": {
