--- a/continuous-pipe.yml.erb
+++ b/continuous-pipe.yml.erb
@@ -1,6 +1,6 @@
 variables:
-  DATABASE_NAME: <%= config.name %>
-  DATABASE_USER: <%= config.name %>
+  DATABASE_NAME: magentodb
+  DATABASE_USER: magento
   CP_ENVIRONMENT:
     name: CP_ENVIRONMENT
     expression: '"<%= config.name %>" ~ code_reference.branch'
@@ -100,6 +100,42 @@ tasks:
               MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
               MYSQL_DATABASE: ${DATABASE_NAME}
               MYSQL_USER: ${DATABASE_USER}
+
+        redis:
+          deployment_strategy:
+            readiness_probe:
+              type: tcp
+              port: 6379
+
+          specification:
+            ports:
+              - 6379
+
+            resources:
+              requests:
+                cpu: 50m
+                memory: 50Mi
+              limits:
+                cpu: 250m
+                memory: 250Mi
+
+        memcached:
+          deployment_strategy:
+            readiness_probe:
+              type: tcp
+              port: 11211
+
+          specification:
+            ports:
+              - 11211
+
+            resources:
+              requests:
+                cpu: 50m
+                memory: 50Mi
+              limits:
+                cpu: 250m
+                memory: 250Mi
 
   reserve_ip:
     deploy:
