Add CP MAGENTO_CRYPT_KEY UI-set variable

--- a/continuous-pipe.yml.erb
+++ b/continuous-pipe.yml.erb
@@ -234,6 +234,7 @@ tasks:
               AUTH_HTTP_HTPASSWD: ${AUTH_HTTP_HTPASSWD?:}
               AUTH_IP_WHITELIST_ENABLED: true
               AUTH_IP_WHITELIST: ${AUTH_IP_WHITELIST?:}
+              MAGENTO_CRYPT_KEY: ${MAGENTO_CRYPT_KEY?:}
               TRUSTED_REVERSE_PROXIES: ${TRUSTED_REVERSE_PROXIES?:}
               TIDEWAYS_API_KEY: ${TIDEWAYS_API_KEY?:}
               SENDMAIL_RELAY_HOST: ${SENDMAIL_RELAY_HOST}
