--- a/docker-compose.yml.erb
+++ b/docker-compose.yml.erb
@@ -30,11 +30,12 @@ services:
       TIDEWAYS_ENABLED: 'true'
       RUN_BUILD: # get from host env
       WEB_DIRECTORY: public
+      WEB_HOST: localhost
       AUTH_HTTP_HEALTHCHECK_LOCATION: '/status/healthcheck'
     healthcheck:
       test: ["CMD", "curl", "--fail", "--header", "--insecure", "https://localhost/status/healthcheck"]
       interval: 10s
-      retries: 12
+      retries: 18
     expose:
       - 80
       - 443
